change opengraph, add images readme

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const projects = (await getCollection("projects"))
   .slice(0, 3);
 ---
 
-<PageLayout title="Home" description={SITE.DESCRIPTION}>
+<PageLayout title="Inicio" description={SITE.DESCRIPTION}>
   <!-- HERO -->
   <section class="w-full mt-20">
     <div class="animate h-full w-full flex items-center justify-center">
