--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,8 +8,8 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
-const { title, description, image = "/opengraph.png" } = Astro.props;
+const imageUrl = "/opengraph.png";
+const { title, description, image = imageUrl } = Astro.props;
 ---
 
 <!-- Global Metadata -->
