--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,8 +8,8 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const imageUrl = "/opengraph.png";
-const { title, description, image = imageUrl } = Astro.props;
+const { title, description, image = "/opengrap.png" } = Astro.props;
+const imageUrl = new URL(image, Astro.url).href;
 ---
 
 <!-- Global Metadata -->
@@ -46,14 +46,14 @@ const { title, description, image = imageUrl } = Astro.props;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:image" content={imageUrl} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+<meta property="twitter:image" content={imageUrl} />
 
 <!-- Sitemap -->
 <link rel="sitemap" href="/sitemap-index.xml" />
