--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,7 +8,7 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const { title, description, image = "/opengrap.png" } = Astro.props;
+const { title, description, image = "/opengraph.png" } = Astro.props;
 const imageUrl = new URL(image, Astro.url).href;
 ---
 
@@ -43,12 +43,12 @@ const imageUrl = new URL(image, Astro.url).href;
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content={Astro.url} />
+<meta property="og:url" content={canonicalURL} />
 <meta property="og:title" content={title} />
-<meta content="1200" property="og:image:width" />
-<meta content="630" property="og:image:height" />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={imageUrl} />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:heigth" content="630" />
 
 <!-- Twitter -->
 <meta content="summary_large_image" property="twitter:card" />
@@ -73,9 +73,8 @@ const imageUrl = new URL(image, Astro.url).href;
 <script is:inline src="/js/scroll.js"></script>
 <script is:inline src="/js/animate.js"></script>
 
-<meta content={Astro.generator} name="generator" />
-
 <!-- <ViewTransitions  /> -->
+<ViewTransitions />
 
 <script>
   import type { TransitionBeforeSwapEvent } from "astro:transitions/client";
