--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,53 +1,48 @@
 ---
-import { getCollection } from "astro:content";
-import PageLayout from "@layouts/PageLayout.astro";
-import ArrowCard from "@components/ArrowCard";
-import { SITE, SOCIALS } from "@consts";
+import { getCollection } from 'astro:content'
+import PageLayout from '@layouts/PageLayout.astro'
+import ArrowCard from '@components/ArrowCard'
+import { SITE, SOCIALS } from '@consts'
 
-const posts = (await getCollection("blog"))
+const posts = (await getCollection('blog'))
   .filter((post) => !post.data.draft)
   .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
-  .slice(0, 3);
+  .slice(0, 3)
 
-const projects = (await getCollection("projects"))
+const projects = (await getCollection('projects'))
   .filter((project) => !project.data.draft)
   .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
-  .slice(0, 3);
+  .slice(0, 3)
 ---
 
-<PageLayout title="Inicio" description={SITE.DESCRIPTION}>
+<PageLayout title='Inicio' description={SITE.DESCRIPTION}>
   <!-- HERO -->
-  <section class="w-full mt-20">
-    <div class="animate h-full w-full flex items-center justify-center">
-      <div class="w-full h-full flex items-center justify-center">
-        <div class="p-5 text-center">
+  <section class='w-full mt-20'>
+    <div class='animate h-full w-full flex items-center justify-center'>
+      <div class='w-full h-full flex items-center justify-center'>
+        <div class='p-5 text-center'>
           <p
-            class="animated text-lg md:text-xl lg:text-2xl font-semibold opacity-75"
-          >
+            class='animated text-lg md:text-xl lg:text-2xl font-semibold opacity-75'>
             Hola, soy Jean Carlos
           </p>
           <p
-            class="animated text-sky-800 dark:text-sky-500 text-2xl md:text-3xl lg:text-4xl font-bold uppercase"
-          >
+            class='animated text-sky-800 dark:text-sky-500 text-2xl md:text-3xl lg:text-4xl font-bold uppercase'>
             Ingeniero eléctrico
           </p>
-          <p class="animated text-sm md:text-base lg:text-lg opacity-75">
+          <p class='animated text-sm md:text-base lg:text-lg opacity-75'>
             <b>+4</b> años de experiencia. Diseñando proyectos eléctricos.
           </p>
           <div
-            id="ctaButtons"
-            class="animated flex flex-wrap gap-4 justify-center mt-5"
-          >
+            id='ctaButtons'
+            class='animated flex flex-wrap gap-4 justify-center mt-5'>
             <a
-              href="/blog"
-              class="py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend"
-            >
+              href='/blog'
+              class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
               Leer mis articulos
             </a>
             <a
-              href="/work"
-              class="py-2 px-4 truncate rounded text-xs md:text-sm lg:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 blend"
-            >
+              href='/work'
+              class='py-2 px-4 truncate rounded text-xs md:text-sm lg:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 blend'>
               Ver mi experiencia
             </a>
           </div>
@@ -56,10 +51,10 @@ const projects = (await getCollection("projects"))
     </div>
   </section>
 
-  <div class="relative bg-white dark:bg-black">
-    <div class="mx-auto max-w-screen-sm p-5 space-y-24 pb-16">
+  <div class='relative bg-white dark:bg-black'>
+    <div class='mx-auto max-w-screen-sm p-5 space-y-24 pb-16'>
       <!-- About Section -->
-      <section class="animate">
+      <section class='animate'>
         <article>
           <p>
             Soy <b><i>ingeniero eléctrico</i></b>, <b
@@ -86,24 +81,22 @@ const projects = (await getCollection("projects"))
       </section>
 
       <!-- Blog Preview Section -->
-      <section class="animate">
-        <div class="space-y-4">
-          <div class="flex justify-between">
-            <p class="font-semibold text-black dark:text-white">
+      <section class='animate'>
+        <div class='space-y-4'>
+          <div class='flex justify-between'>
+            <p class='font-semibold text-black dark:text-white'>
               Articulos recienctes
             </p>
             <a
-              href="/blog"
-              class="w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend"
-            >
+              href='/blog'
+              class='w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend'>
               <span
-                class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend"
-              >
+                class='text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend'>
                 Todos los articulos
               </span>
             </a>
           </div>
-          <ul class="space-y-4">
+          <ul class='space-y-4'>
             {
               posts.map((post) => (
                 <li>
@@ -116,24 +109,22 @@ const projects = (await getCollection("projects"))
       </section>
 
       <!-- Project Preview Section -->
-      <section class="animate">
-        <div class="space-y-4">
-          <div class="flex justify-between">
-            <p class="font-semibold text-black dark:text-white">
+      <section class='animate'>
+        <div class='space-y-4'>
+          <div class='flex justify-between'>
+            <p class='font-semibold text-black dark:text-white'>
               Proyectos recientes
             </p>
             <a
-              href="/projects"
-              class="w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend"
-            >
+              href='/projects'
+              class='w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend'>
               <span
-                class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend"
-              >
+                class='text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend'>
                 Todos los proyectos
               </span>
             </a>
           </div>
-          <ul class="space-y-4">
+          <ul class='space-y-4'>
             {
               projects.map((project) => (
                 <li>
@@ -146,29 +137,28 @@ const projects = (await getCollection("projects"))
       </section>
 
       <!-- Contact Section -->
-      <section class="animate">
+      <section class='animate'>
         <div>
-          <p class="font-semibold text-black dark:text-white">Contáctame</p>
+          <p class='font-semibold text-black dark:text-white'>Contáctame</p>
           <p>
             Póngase en contacto conmigo por correo electrónico o en las redes
             sociales.
           </p>
-          <div class="grid grid-cols-4 gap-y-2 mt-4 auto-cols-min">
+          <div class='grid grid-cols-4 gap-y-2 mt-4 auto-cols-min'>
             {
               SOCIALS.map((social) => (
                 <>
-                  <div class="col-span-1 flex items-center gap-1">
-                    <span class="whitespace-nowrap truncate">
+                  <div class='col-span-1 flex items-center gap-1'>
+                    <span class='whitespace-nowrap truncate'>
                       {social.NAME}
                     </span>
                   </div>
-                  <div class="col-span-3 truncate">
+                  <div class='col-span-3 truncate'>
                     <a
                       href={social.HREF}
-                      target="_blank"
-                      class="w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend"
-                    >
-                      <span class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend">
+                      target='_blank'
+                      class='w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend'>
+                      <span class='text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend'>
                         {social.TEXT}
                       </span>
                     </a>
