--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,16 +4,16 @@
 
 @layer base {
   @font-face {
-    font-family: "Atkinson";
-    src: url("/fonts/atkinson-regular.woff") format("woff");
+    font-family: 'Atkinson';
+    src: url('/fonts/atkinson-regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Atkinson";
-    src: url("/fonts/atkinson-bold.woff") format("woff");
+    font-family: 'Atkinson';
+    src: url('/fonts/atkinson-bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -24,7 +24,7 @@ html {
   overflow-y: scroll;
   color-scheme: light;
   background-color: white;
-  font-family: "Atkinson", sans-serif;
+  font-family: 'Atkinson', sans-serif;
 }
 
 html.dark {
