--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,20 +18,8 @@ const imageUrl = new URL(image, Astro.url).href
 <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 <meta name='generator' content={Astro.generator} />
 
-<link
-  rel='preload'
-  href='/fonts/atkinson-regular.woff'
-  as='font'
-  type='font/woff'
-  crossorigin
-/>
-<link
-  rel='preload'
-  href='/fonts/atkinson-bold.woff'
-  as='font'
-  type='font/woff'
-  crossorigin
-/>
+<link rel='preload' href='/fonts/atkinson-regular.woff' as='font' type='font/woff' crossorigin />
+<link rel='preload' href='/fonts/atkinson-bold.woff' as='font' type='font/woff' crossorigin />
 
 <!-- Canonical URL -->
 <link rel='canonical' href={canonicalURL} />
@@ -61,12 +49,7 @@ const imageUrl = new URL(image, Astro.url).href
 <link rel='sitemap' href='/sitemap-index.xml' />
 
 <!-- RSS Feed -->
-<link
-  rel='alternate'
-  type='application/rss+xml'
-  title={title}
-  href={`${Astro.site}rss.xml`}
-/>
+<link rel='alternate' type='application/rss+xml' title={title} href={`${Astro.site}rss.xml`} />
 
 <!-- Global Scripts -->
 <script is:inline src='/js/theme.js'></script>
@@ -79,10 +62,8 @@ const imageUrl = new URL(image, Astro.url).href
 <script>
   import type { TransitionBeforeSwapEvent } from 'astro:transitions/client'
   document.addEventListener('astro:before-swap', (e) =>
-    [
-      ...(e as TransitionBeforeSwapEvent).newDocument.head.querySelectorAll(
-        'link[as="font"]',
-      ),
-    ].forEach((link) => link.remove()),
+    [...(e as TransitionBeforeSwapEvent).newDocument.head.querySelectorAll('link[as="font"]')].forEach((link) =>
+      link.remove(),
+    ),
   )
 </script>
