--- a/src/layouts/ArticleBottomLayout.astro
+++ b/src/layouts/ArticleBottomLayout.astro
@@ -2,7 +2,7 @@
 import { type CollectionEntry, getCollection } from 'astro:content'
 
 type Props = {
-  entry: CollectionEntry<'blog'> | CollectionEntry<'projects'>
+  entry: CollectionEntry<'articulos'> | CollectionEntry<'proyectos'>
 }
 
 // Get the requested entry
@@ -27,8 +27,7 @@ const next = items[(index + 1) % items.length]
     <a
       href={`/${prev.collection}/${prev.slug}`}
       class='group p-4 gap-3 flex items-center border rounded-lg hover:bg-black/5 hover:dark:bg-white/10 border-black/15 dark:border-white/20 blend'>
-      <div
-        class='order-2 w-full h-full group-hover:text-black group-hover:dark:text-white blend'>
+      <div class='order-2 w-full h-full group-hover:text-black group-hover:dark:text-white blend'>
         <div class='flex flex-wrap gap-2'>
           <div class='text-sm uppercase'>Previo</div>
         </div>
@@ -55,15 +54,13 @@ const next = items[(index + 1) % items.length]
         ></line>
         <polyline
           points='12 5 19 12 12 19'
-          class='translate-x-0 group-hover:translate-x-1 transition-all duration-300 ease-in-out'
-        ></polyline>
+          class='translate-x-0 group-hover:translate-x-1 transition-all duration-300 ease-in-out'></polyline>
       </svg>
     </a>
     <a
       href={`/${next.collection}/${next.slug}`}
       class='group p-4 gap-3 flex items-center border rounded-lg hover:bg-black/5 hover:dark:bg-white/10 border-black/15 dark:border-white/20 transition-colors duration-300 ease-in-out'>
-      <div
-        class='w-full h-full text-right group-hover:text-black group-hover:dark:text-white blend'>
+      <div class='w-full h-full text-right group-hover:text-black group-hover:dark:text-white blend'>
         <div class='text-sm uppercase'>Siguiente</div>
         <div class='font-semibold mt-3 text-black dark:text-white'>
           {next.data.title}
@@ -88,8 +85,7 @@ const next = items[(index + 1) % items.length]
         ></line>
         <polyline
           points='12 5 19 12 12 19'
-          class='translate-x-0 group-hover:translate-x-1 transition-all duration-300 ease-in-out'
-        ></polyline>
+          class='translate-x-0 group-hover:translate-x-1 transition-all duration-300 ease-in-out'></polyline>
       </svg>
     </a>
   </div>
