--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,12 @@ import PageLayout from '@layouts/PageLayout.astro'
 import ArrowCard from '@components/ArrowCard'
 import { SITE, SOCIALS } from '@consts'
 
-const posts = (await getCollection('blog'))
+const posts = (await getCollection('articulos'))
   .filter((post) => !post.data.draft)
   .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
   .slice(0, 3)
 
-const projects = (await getCollection('projects'))
+const projects = (await getCollection('proyectos'))
   .filter((project) => !project.data.draft)
   .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
   .slice(0, 3)
@@ -21,20 +21,14 @@ const projects = (await getCollection('projects'))
     <div class='animate h-full w-full flex items-center justify-center'>
       <div class='w-full h-full flex items-center justify-center'>
         <div class='p-5 text-center'>
-          <p
-            class='animated text-lg md:text-xl lg:text-2xl font-semibold opacity-75'>
-            Hola, soy Jean Carlos
-          </p>
-          <p
-            class='animated text-sky-800 dark:text-sky-500 text-2xl md:text-3xl lg:text-4xl font-bold uppercase'>
+          <p class='animated text-lg md:text-xl lg:text-2xl font-semibold opacity-75'>Hola, soy Jean Carlos</p>
+          <p class='animated text-sky-800 dark:text-sky-500 text-2xl md:text-3xl lg:text-4xl font-bold uppercase'>
             Ingeniero eléctrico
           </p>
           <p class='animated text-sm md:text-base lg:text-lg opacity-75'>
             <b>+4</b> años de experiencia. Diseñando proyectos eléctricos.
           </p>
-          <div
-            id='ctaButtons'
-            class='animated flex flex-wrap gap-4 justify-center mt-5'>
+          <div id='ctaButtons' class='animated flex flex-wrap gap-4 justify-center mt-5'>
             <a
               href='/blog'
               class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
@@ -52,30 +46,25 @@ const projects = (await getCollection('projects'))
   </section>
 
   <div class='relative bg-white dark:bg-black'>
-    <div class='mx-auto max-w-screen-sm p-5 space-y-24 pb-16'>
+    <div class='mx-auto max-w-screen-sm p-5 space-y-24 pb-12'>
       <!-- About Section -->
       <section class='animate'>
         <article>
           <p>
-            Soy <b><i>ingeniero eléctrico</i></b>, <b
-              ><i>proyectista independiente</i></b
-            >, <b><i>diseño proyectos eléctricos</i></b>, <b
-              ><i>estudiante</i></b
-            >, <b><i>minimalista</i></b>, <b><i>eterno optimista</i></b> y <b
+            Soy <b><i>ingeniero eléctrico</i></b>, <b><i>proyectista independiente</i></b>, <b
+              ><i>diseño proyectos eléctricos</i></b
+            >, <b><i>estudiante</i></b>, <b><i>minimalista</i></b>, <b><i>eterno optimista</i></b> y <b
               ><i>entusiasta de la programación</i></b
             >.
           </p>
           <p>
-            Me encanta construir y mejorar cosas. Me motivan los proyectos
-            desafiantes con investigación autoguiada y la resolución dinámica de
-            problemas. Mi verdadera pasión es crear diseños eléctricos
-            confiables.
+            Me encanta construir y mejorar cosas. Me motivan los proyectos desafiantes con investigación autoguiada y la
+            resolución dinámica de problemas. Mi verdadera pasión es crear diseños eléctricos confiables.
           </p>
           <p>A lo largo de mi carrera</p>
           <p>
-            He desarrollado proyectos que van desde una instalación eléctrica de
-            baja tensión y media tensión, redes eléctricas de pequeña y gran
-            envergadura. Con enfoque en la confiabilidad y el rendimiento.
+            He desarrollado proyectos que van desde una instalación eléctrica de baja tensión y media tensión, redes
+            eléctricas de pequeña y gran envergadura. Con enfoque en la confiabilidad y el rendimiento.
           </p>
         </article>
       </section>
@@ -84,14 +73,11 @@ const projects = (await getCollection('projects'))
       <section class='animate'>
         <div class='space-y-4'>
           <div class='flex justify-between'>
-            <p class='font-semibold text-black dark:text-white'>
-              Articulos recienctes
-            </p>
+            <p class='font-semibold text-black dark:text-white'>Articulos recienctes</p>
             <a
-              href='/blog'
+              href='/articulos'
               class='w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend'>
-              <span
-                class='text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend'>
+              <span class='text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend'>
                 Todos los articulos
               </span>
             </a>
@@ -112,14 +98,11 @@ const projects = (await getCollection('projects'))
       <section class='animate'>
         <div class='space-y-4'>
           <div class='flex justify-between'>
-            <p class='font-semibold text-black dark:text-white'>
-              Proyectos recientes
-            </p>
+            <p class='font-semibold text-black dark:text-white'>Proyectos recientes</p>
             <a
-              href='/projects'
+              href='/projectos'
               class='w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend'>
-              <span
-                class='text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend'>
+              <span class='text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend'>
                 Todos los proyectos
               </span>
             </a>
@@ -140,18 +123,13 @@ const projects = (await getCollection('projects'))
       <section class='animate'>
         <div>
           <p class='font-semibold text-black dark:text-white'>Contáctame</p>
-          <p>
-            Póngase en contacto conmigo por correo electrónico o en las redes
-            sociales.
-          </p>
+          <p>Póngase en contacto conmigo por correo electrónico o en las redes sociales.</p>
           <div class='grid grid-cols-4 gap-y-2 mt-4 auto-cols-min'>
             {
               SOCIALS.map((social) => (
                 <>
                   <div class='col-span-1 flex items-center gap-1'>
-                    <span class='whitespace-nowrap truncate'>
-                      {social.NAME}
-                    </span>
+                    <span class='whitespace-nowrap truncate'>{social.NAME}</span>
                   </div>
                   <div class='col-span-3 truncate'>
                     <a
