--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,12 +30,12 @@ const projects = (await getCollection('proyectos'))
           </p>
           <div id='ctaButtons' class='animated flex flex-wrap gap-4 justify-center mt-5'>
             <a
-              href='/blog'
+              href='/articulos'
               class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
               Leer mis articulos
             </a>
             <a
-              href='/work'
+              href='/experiencia'
               class='py-2 px-4 truncate rounded text-xs md:text-sm lg:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 blend'>
               Ver mi experiencia
             </a>
@@ -46,7 +46,7 @@ const projects = (await getCollection('proyectos'))
   </section>
 
   <div class='relative bg-white dark:bg-black'>
-    <div class='mx-auto max-w-screen-sm p-5 space-y-24 pb-12'>
+    <div class='mx-auto max-w-screen-sm p-5 space-y-24 pb-6'>
       <!-- About Section -->
       <section class='animate'>
         <article>
